# part-x

./: .coverage  .gitignore  Goldstein_Price_1.pkl  LICENSE  README.md  almost_final.py  bayesianOptimization.py  budget_check.py  calIntegral.py  calculate_robustness.py  cont_sampling_proportion.py  estimate_quantiles.py  exp_statistics.py  partx_draft_2.py  partx_flow.py  partx_node.py  partx_options.py  partx_testing.py  partx_tree_test.py  pyproject.toml  read_tree.py  sampling.py  single_replication.py  testFunction.py  test_csv.py  tree.pkl  utils_partx.py
demos/: arch_benchmarks_f16.py  non_linear_goldstein.py  non_linear_himmelblaus.py  non_linear_rosenbrock.py
demos/ArchBenchmarks/: AbstractFuelControl_M1.slx  AbstractFuelControl_M1.slxc  AbstractFuelControl_M1_acc.mexa64  Autotrans_shift.slxc  narmamaglev_v1.slx  narmamaglev_v1.slxc
demos/Non-LinearBenchmarks/: GoldsteinPrice_withConstraints.py  Goldstein_1.py  Goldstein_1_noConstraints.py  Goldstein_2.py  Goldstein_3.py  Himmelblaus_1.py  Himmelblaus_2.py  Himmelblaus_3.py
docs/: Demo 1 - Standalone Part-X.html  Demo 2 - Part-X with Psy-TaLiRo.html  Getting Started.html  Part-X with PsyTaLiRo.html  Standalone Usage.html  genindex.html  index.html  searchindex.js
docs/.doctrees/: Demo 1 - Standalone Part-X.doctree  Demo 2 - Part-X with Psy-TaLiRo.doctree  Outputs.doctree  Part-X with PsyTaLiRo.doctree  Standalone Usage.doctree  environment.pickle  index.doctree
docs/_sources/: Standalone Usage.rst.txt  (+4 more)
docs_build/: .buildinfo  Outputs.html  Part-X with PsyTaLiRo.html  index.html  search.html
partx/: __init__.py
tempTesting/: tempTest.py  tp.py  tree.py  treeLobTest.py  tree_temp.py
tests/: .coverage  test_partx.py
(+267 files in other folders)
