[tool.poetry]
name = "partx"
version = "0.1.1"
description = "PartX - A family of stochastic optimzers"
authors = ["Tanmay Bhaskar Khandait <tkhandai@asu.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
treelib = "^1.6.1"
pathos = "^0.2.8"
numpy = "^1.21.2"
scikit-learn = ">0.24.2"
scipy = ">1.7.1"
matplotlib = "^3.4.3"
psy-taliro = "^1.0.0-alpha.14"
scikit-optimize = ">0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
