[tool.poetry]
name = "partx"
version = "0.2.0"
description = ""
authors = ["daittan <tkhandai@asu.edu>"]
packages = [{include="partx"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"
scikit-optimize = "^0.9.0"
coverage = "^6.4"
matplotlib = "^3.5.2"
treelib = "^1.6.1"
pandas = "^1.4.3"
pathos = "^0.2.9"
Sphinx = "^5.3.0"
psy-taliro = {version = "1.0.0b9", extras = ["rtamt"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
